<resources>
    <string name="app_name">FarmHub Dairy</string>
    <string name="title_activity_test">test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="name">Animal name</string>
    <string name="test_name">Test Name</string>
    <string name="breed">Breed</string>
    <string name="jersey">Jersey</string>
    <string name="add_animal">Add Animal</string>
    <string name="label_female">Female</string>
    <string name="label_gender">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_select_image">Select Image</string>
    <string name="animal_name">Animal Name</string>
    <string name="enter_animal_name">Enter Animal Name/Animal ID</string>
    <string name="animal_breed">Animal Breed</string>
    <string name="enter_breed">Enter Animal Breed</string>
    <string name="location">Current Animal Location</string>
    <string name="enter_animal_location">Enter Animal Location</string>
    <string name="save_info">Save Animal Info</string>
    <string name="add_animal_image">Add Animal image</string>
    <string name="optional">Optional</string>
    <string name="gender">Choose Animal Gender</string>
    <string name="add_category">Add Category</string>
    <string name="select_a_category">Select a Category</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="_add_category">ADD CATEGORY</string>
    <string name="choose_status">Choose Status</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="hint_enter_source">Enter Source</string>
    <string name="hint_transaction">Transaction</string>
    <string name="hint_enter_amount">Enter Amount</string>
    <string name="search_animal_name">Search Animal (by name)</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="full_name">Full Name</string>
    <string name="no_account">Don\'t have an Account?</string>
    <string name="farm_name">Farm Name</string>
    <string name="animal_count">No of Animals</string>
    <string name="info_text">(If you category doesn\'t appear, click the add icon on the navbar to add one)</string>
    <string name="_location">Location</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="registration_date">Date of Reg</string>
    <string name="milk_produced">Add Milk Produced (Today)</string>
    <string name="quantity">Quantity Produced (Litres)</string>
    <string name="_quantity">Quantity Produced (Kgs)</string>
    <string name="submit">Submit</string>
    <string name="milk_produce">Milk Produce</string>
    <string name="meat_produce">Meat Produce</string>
    <string name="select_action">Please Select an Option</string>
    <string name="option_info">Tap on any of the Options below to add your preferred today\'s produce for your selected animal</string>
    <string name="add_produce">Add Produce</string>
    <string name="meat_produced">Add Meat Produced</string>
    <string name="tap_here">Tap Here</string>
    <string name="trans_info">Select a Transaction type from the dropdown list below</string>
    <string name="search_date">Search Date</string>
    <string name="enter_cash">Amount (Ksh)</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_quantity">Quantity (litres)</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="_type">type</string>
    <string name="_quantity_">Quantity Sold</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="amount_">Amount (Ksh)</string>
    <string name="quantity_litres">Quantity Sold (litres)</string>
    <string name="quantity_kgs">Quantity Sold (Kgs)</string>
    <string name="availability_">Availability</string>
    <string name="available">Available</string>
    <string name="sold">Sold</string>
    <string name="update_animal_info">Update Info</string>
    <string name="reports">Reports</string>
    <string name="report_date">Search Date to generate report</string>
    <string name="no_record">Selected date doesn\'t contain any record</string>
    <string name="report_error">Unable to generate report</string>
    <string name="congrats">Congratulations</string>
    <string name="report_id">ReportId</string>
    <string name="date">Date</string>
    <string name="total_milk_sales">Total Milk Sales</string>
    <string name="total">total</string>
    <string name="total_animal_sales">Total Animal Sales</string>
    <string name="total_amount">Total Amount</string>
    <string name="click_here">Click To View</string>
    <string name="proceed">Proceed</string>
    <string name="info_msg">Report generated successfully. Click on Proceed to view report, otherwise click on Cancel</string>
    <string name="total_transactions">Total Transactions</string>
    <string name="error">Something went wrong</string>
    <string name="no_reports">No reports for this date</string>
    <string name="info">Daily Report for the selected date</string>
    <string name="logout">Logout</string>
    <string name="edit_account_info">Edit Account Info</string>
    <string name="no_of_animals">No. of Animals</string>
    <string name="phone">Phone</string>
    <string name="choose_mother">Choose Mother</string>
    <string name="choose_father">Choose Father</string>
    <string name="selection_info">You Selected Born on Farm. Please select from the below options to proceed</string>
    <string name="no_parents">No Parents</string>
    <string name="_save">SAVE</string>
    <string name="success_msg">Animal info updated successfully</string>
    <string name="unable_to_update">Can\'t update animal info right now</string>
    <string name="failed_user">Failed to get user details</string>
    <string name="save_user_info">Save User Info</string>

    <string-array name="status">
        <item>Choose One</item>
        <item>Born on Farm</item>
        <item>Purchased</item>
    </string-array>

    <string-array name="type">
        <item>Choose One</item>
        <item>Milk Sale</item>
        <item>Animal Sale</item>
    </string-array>

    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="error_qty_info">Quantity entered should not exceed remaining quantity for the selected date</string>
    <string name="option_selection">Tap on Animal Detail to view the selected animal\'s info or Reports to view the selected animal\'s produce reports</string>
    <string name="animal_info">Animal Info</string>
    <string name="animal_reports">Reports</string>
    <string name="animal_details">Animal Details</string>
    <string name="name_tag">Name/Tag</string>
    <string name="update">Update</string>
    <string name="evening">Evening Qty (litres)</string>
    <string name="morning_">Morning Qty (litres)</string>
    <string name="total_">Total Qty Produced (litres)</string>
    <string name="totalQty_msg">Today\'s remaining quantity is</string>
</resources>
