<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_action"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:padding="16dp"
        android:textAllCaps="true"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/option_info"/>

    <Button
        android:id="@+id/btnMilk"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="30dp"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:background="@drawable/buttons"
        android:text="@string/milk_produce" />

    <Button
        android:id="@+id/btnMeat"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttons_red"
        android:text="@string/meat_produce"
        android:textAllCaps="true"
        android:textColor="@android:color/white"/>

</LinearLayout>