<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        app:cardCornerRadius="3dp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:gravity="center_vertical"
            android:weightSum="100">
            <LinearLayout
                android:id="@+id/animalClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="80">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/animalImage"
                    android:layout_width="65dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_animal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_margin="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/animalName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breed"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/animalBreed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jersey"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/addProduce"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:src="@drawable/ic_add_color"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>